--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "^5.0.0",
     "autoprefixer": "^10.4.21",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
